Added color changes to index.html

--- a/src/staticfiles/color_override.css
+++ b/src/staticfiles/color_override.css
@@ -1,10 +1,9 @@
 /* Override styles for anchor buttons */
 a[role="button"] {
-    background-color: blue ;  
-    
+    background-color: blue !important;    
 }
 
 /* Override styles for input submit buttons */
 input[type="submit"] {
-    background-color: blue;
+    background-color: blue !important;
 }
